# bills-blog

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  fly.toml  rustfmt.toml
assets/: ball_solo.mtl
src/: camera.rs  lib.rs  resources.rs  shader.wgsl  texture.rs
web/: index.html  main.js  style.css
