[package]
name = "bills-blog"
version = "0.0.1"
authors = [ "Bill Kusters <wmkusters@gmail.com>" ]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rapier3d = "0.33.0"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "0.4.75"
wgpu = { version = "^29.0", features = ["webgpu"]}
console_log = "1.0"
log = "^0.4"
web-sys = { version = "^0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement"
]}
bytemuck = "1.25.0"
anyhow = "1.0.102"
cgmath = "0.18.0"
image = "0.25.10"
